b2c/sfsc/src/objects/Payment_Information__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Charged_to_Card__c</fullName>
        <label>Amount Charged to Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardholder_Name__c</fullName>
        <label>Cardholder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <label>Expiration</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payment Information</relationshipLabel>
        <relationshipName>Payment_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Payment Information</label>
    <nameField>
        <label>Payment Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>